--- a/Main/templates/Main/index.html
+++ b/Main/templates/Main/index.html
@@ -35,5 +35,21 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
-{% endblock content %}
 
+  <style>
+      /* Estilo para las flechas del carousel */
+      .carousel-control-prev-icon,
+      .carousel-control-next-icon {
+          background-color: #388e3c; /* Color verde oscuro */
+          width: 40px; /* Tamaño mayor */
+          height: 40px; /* Tamaño mayor */
+          border-radius: 50%; /* Flechas redondeadas */
+      }
+
+      .carousel-control-prev-icon:hover,
+      .carousel-control-next-icon:hover {
+          background-color: #2c6c29; /* Color más oscuro al hacer hover */
+      }
+  </style>
+  
+{% endblock content %}
