--- a/Main/templates/Main/about_me.html
+++ b/Main/templates/Main/about_me.html
@@ -17,7 +17,7 @@
             <img src="{% static 'imagenes/Eze.jpg' %}" class="img-fluid rounded-circle" alt="Foto del creador">
         </div>
         <div class="col-md-8">
-            <h2>¡Hola! Soy Ezequiel Francisco Baualdo</h2>
+            <h2>¡Hola! Soy Ezequiel Francisco Basualdo</h2>
             <p>
                 Bienvenidos a "El cielo de las guitarras". Soy un apasionado de la música y las guitarras sobre todo. Soy contador público, y tengo 28 años.
                 <br> Este blog está dedicado a crear una comunidad de músicos que toquen guitarra o bajo. Aquí encontrarás consejos y experiencias, música y mucho más. ¡Espero que disfrutes del contenido!
