commit usuario basico exitoso

--- a/Main/templates/Main/login.html
+++ b/Main/templates/Main/login.html
@@ -74,7 +74,7 @@
                             <button type="submit" class="btn btn-success w-100 mt-3">Iniciar sesión</button> <!-- Aquí el botón es verde -->
                         </form>
                         <div class="text-center mt-3">
-                            <p>¿No tienes cuenta? <a href="{% url 'Main:registro' %}">Regístrate aquí</a></p>
+                            <p>¿No tienes cuenta? <a href="{% url 'Main:register' %}">Regístrate aquí</a></p>
                         </div>
                     </div>
                 </div>
