--- a/Main/templates/Main/editarPerfil.html
+++ b/Main/templates/Main/editarPerfil.html
@@ -1,8 +1,10 @@
 {% extends "Main/index.html" %}
 
-{% block titulo %}Editar Perfil{% endblock %}
+{% block content_title %}
+<!-- Este bloque se sobrescribe vacío para que no aparezca nada -->
+{% endblock content_title %}
 
-{% block cuerpo %}
+{% block content %}
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-lg p-4 rounded" style="width: 28rem; background-color: #ffffff;">
         <h2 class="text-center mb-4 text-primary">Editar Perfil</h2>
