--- a/Main/templates/Main/editarPerfil.html
+++ b/Main/templates/Main/editarPerfil.html
@@ -10,7 +10,8 @@
         <h2 class="text-center mb-4 text-primary">Editar Perfil</h2>
         <form method="post" novalidate>
             {% csrf_token %}
-            {{ miFormulario.as_p }}
+            {{ user_form.as_p }}
+            {{ profile_form.as_p }}
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-success w-100">Guardar Cambios</button>
             </div>
