--- a/Main/templates/Main/editarPerfil.html
+++ b/Main/templates/Main/editarPerfil.html
@@ -8,7 +8,7 @@
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-lg p-4 rounded" style="width: 28rem; background-color: #ffffff;">
         <h2 class="text-center mb-4 text-primary">Editar Perfil</h2>
-        <form method="post" novalidate>
+        <form method="post" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             {{ user_form.as_p }}
             {{ profile_form.as_p }}
