--- a/Main/templates/Main/base.html
+++ b/Main/templates/Main/base.html
@@ -97,6 +97,9 @@
                     <a class="nav-link" href="{% url 'Main:about_me' %}">Sobre mí</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog:album_list' %}">Álbumes</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'Main:editarPerfil' %}">Editar Perfil</a>
                 </li>
                 {% if user.is_authenticated %}
