--- a/blog/templates/blog/album_list.html
+++ b/blog/templates/blog/album_list.html
@@ -15,7 +15,7 @@
             {% for album in albums %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <div>
-                        <strong>{{ album.nombre }}</strong> <!-- Solo el nombre del álbum -->
+                        <strong>{{ album.nombre }}</strong> <!-- Nombre del álbum -->
                     </div>
                     <!-- Botón para ver detalles -->
                     <a href="{% url 'blog:album_detail' album.pk %}" class="btn btn-secondary">Ver detalles</a>
