--- a/blog/templates/blog/album_delete.html
+++ b/blog/templates/blog/album_delete.html
@@ -1,9 +1,6 @@
 {% extends "Main/base.html" %}
-{% load static %}
 
-<title>
-    {% block title %}Confirmar eliminación{% endblock %}
-</title>
+{% block title %}Confirmar eliminación{% endblock %}
 
 {% block content_title %}Confirmar eliminación del Álbum{% endblock content_title %}
 
@@ -11,6 +8,12 @@
     {% if error_message %}
         <div class="alert alert-danger">
             <p>{{ error_message }}</p>
+        </div>
+    {% endif %}
+    
+    {% if confirm_message %}
+        <div class="alert alert-warning">
+            <p>{{ confirm_message }}</p>
         </div>
     {% endif %}
     
