--- a/Main/templates/Main/base.html
+++ b/Main/templates/Main/base.html
@@ -77,7 +77,7 @@
 
     <!-- Barra de navegación principal -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
-        <a class="navbar-brand fw-bold fs-4" href="#">🎸 El cielo de las guitarras 🎸</a>
+        <a class="navbar-brand fw-bold fs-4" href="#">🎸 El cielo de las cuerdas 🎸</a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -94,10 +94,10 @@
                     <a class="nav-link" href="{% url 'blog:leyenda_list' %}">Leyendas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'Main:about_me' %}">Sobre mí</a>
+                    <a class="nav-link" href="{% url 'blog:album_list' %}">Álbumes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog:album_list' %}">Álbumes</a>
+                    <a class="nav-link" href="{% url 'Main:about_me' %}">Sobre mí</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'Main:editarPerfil' %}">Editar Perfil</a>
