--- a/Main/templates/Main/login.html
+++ b/Main/templates/Main/login.html
@@ -28,6 +28,9 @@
                 <div class="text-center mt-3">
                     <p>¿No tienes cuenta? <a href="{% url 'Main:register' %}" class="text-success">Regístrate aquí</a></p>
                 </div>
+                <div class="text-center mt-4">
+                    <a href="{% url 'Main:index' %}" class="btn btn-outline-success w-100">Volver al inicio</a>
+                </div>
             {% endblock cuerpo %}
         </div>
     </div>
