--- a/Main/templates/Main/login.html
+++ b/Main/templates/Main/login.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #f1f8e9;"> <!-- Fondo verde claro -->
-    <div class="container mt-5">
-        <header>
-            <h1 class="text-center text-success mb-4">{% block header %}Iniciar Sesión{% endblock header %}</h1>
-        </header>
-        <div class="card shadow-lg p-4 rounded">
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div style="width: 100%; max-width: 28rem; padding: 2rem; background-color: #ffffff; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); border-radius: 0.5rem;">
+            <header>
+                <h1 class="text-center text-success mb-4">{% block header %}Iniciar Sesión{% endblock header %}</h1>
+            </header>
             {% block cuerpo %}
                 <form method="post">
                     {% csrf_token %}
