--- a/Main/templates/Main/base.html
+++ b/Main/templates/Main/base.html
@@ -77,7 +77,7 @@
 
     <!-- Barra de navegación principal -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
-        <a class="navbar-brand fw-bold fs-4" href="#">🎸 El cielo de las cuerdas 🎸</a>
+        <a class="navbar-brand fw-bold fs-4" href="{% url 'Main:index' %}">🎸 El cielo de las cuerdas 🎸</a> <!-- Enlace al inicio -->
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
