--- a/Main/templates/Main/about_me.html
+++ b/Main/templates/Main/about_me.html
@@ -1,6 +1,6 @@
 {% extends "Main/base.html" %}
 
-{% load static %}  <!-- Agrega esta línea para cargar el tag static -->
+{% load static %}  
 
 {% block title %}
     Sobre mí | El cielo de las guitarras
